Fix input alignment and dimensions

--- a/app/views/styles/application.styl
+++ b/app/views/styles/application.styl
@@ -92,7 +92,7 @@ h1
 
     .pay-label
       margin-top 30px
-      margin-left 17px
+      margin-bottom 5px
 
     input
       margin-top 5px
@@ -100,10 +100,11 @@ h1
       font-family 'Oswald'
       font-size 20px
       border none
+      padding 2px
+      width 125px
 
     .pay-submit
       margin-top 18px
-      margin-left 6px
 
       button
         color #fff
